# flipperzero

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .pinact.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml  shell.nix
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: _build_and_test.yml  _lints.yml  lints.yml  regenerate-bindings.yml  rust.yml  update_bindings.yml
applications_user/: .gitignore  README.md
crates/: Cargo.toml  build-examples.py  cargo-runner.py  fap-lld.py  rust-toolchain.toml
crates/.cargo/: config.toml
crates/alloc/: Cargo.toml  README.md
crates/alloc/src/: lib.rs
crates/flipperzero/: Cargo.toml  README.md
crates/flipperzero/examples/: bluetooth.rs  dialog.rs  embedded-graphics.rs  example_images.rs  gpio.rs  gui.rs  hello-rust.rs  i2c-ds3231.rs  images.rs  notification.rs  scene_manager.rs  serial-echo.rs  spi-gc9a01.rs  storage.rs  stream_buffer.rs  threads.rs  view_dispatcher.rs
crates/flipperzero/examples/icons/: README.md  rustacean-48x32.icon
crates/flipperzero/examples/xbms/: ferris.rs  mod.rs
crates/flipperzero/src/: alloc.rs  filesystem.rs  furi.rs  furi_alloc.rs  internals.rs  io.rs  kernel.rs  lib.rs  macros.rs  panic_handler.rs  serial.rs  storage.rs  xbm.rs
crates/flipperzero/src/bluetooth/: beacon.rs  mod.rs  test_patterns.rs
crates/flipperzero/src/dialogs/: mod.rs
crates/flipperzero/src/dolphin/: deed.rs  mod.rs
crates/flipperzero/src/furi/: dialog.rs  event_flag.rs  hal.rs  io.rs  kernel.rs  message_queue.rs  mod.rs  rng.rs  stream_buffer.rs  string.rs  sync.rs  thread.rs  time.rs
crates/flipperzero/src/furi/hal/: power.rs
crates/flipperzero/src/furi/log/: metadata.rs  mod.rs
crates/flipperzero/src/furi/string/: iter.rs  pattern.rs
crates/flipperzero/src/gpio/: i2c.rs  mod.rs  spi.rs
crates/flipperzero/src/gui/: canvas.rs  gui.rs  gui_layer.rs  icon.rs  icon_animation.rs  mod.rs  scene_manager.rs  view.rs  view_port.rs  xbm.rs
crates/flipperzero/src/gui/canvas/: align.rs  canvas_direction.rs  color.rs  font.rs  font_parameters.rs  mod.rs
crates/flipperzero/src/gui/view_dispatcher/: mod.rs  type.rs
crates/flipperzero/src/gui/view_port/: mod.rs  orientation.rs
crates/flipperzero/src/input/: key.rs  mod.rs  type.rs
crates/flipperzero/src/notification/: backlight.rs  feedback.rs  led.rs  messages.rs  mod.rs  notes.rs  sequences.rs  sounds.rs  vibro.rs
crates/flipperzero/src/subghz/: device.rs  error.rs  mod.rs  preset.rs
crates/flipperzero/src/toolbox/: crc32.rs  md5.rs  mod.rs  sha256.rs
crates/flipperzero/tests/: dolphin.rs  string.rs
crates/gui/: Cargo.toml
crates/gui/src/: canvas.rs  gui.rs  icon.rs  icon_animation.rs  input.rs  lib.rs  view.rs  view_port.rs  xbm.rs
crates/rt/: Cargo.toml  build.rs  flipperzero-rt.ld
crates/rt/src/: lib.rs  manifest.rs  panic_handler.rs  thread.rs
crates/rt/src/thread/: list.rs  mod.rs
crates/sys/: Cargo.toml  README.md  build.rs
crates/sys/src/: bindings.rs  canvas.rs  furi.rs  gui.rs  icon.rs  lfrfid.rs  lib.rs  message_queue.rs  notification.rs  view_port.rs
crates/sys/src/furi/: alloc.rs  base.rs  check.rs  kernel.rs  memmgr.rs  message_queue.rs  mod.rs  mutex.rs  record.rs  status.rs  thread.rs
crates/sys/src/furi/hal/: cdc.rs  clock.rs  console.rs  cortex.rs  crypto.rs  debug.rs  mod.rs  random.rs  rtc.rs
crates/sys/src/gui/: canvas.rs  elements.rs  mod.rs  text_input.rs  variable_item_list.rs  view.rs  view_dispatcher.rs  view_port.rs
crates/sys/src/inlines/: furi_hal_gpio.rs  mod.rs
crates/sys/src/toolbox/: mod.rs  protocols.rs
crates/test/: Cargo.toml
crates/test/macros/: Cargo.toml
crates/test/macros/src/: deassert.rs  lib.rs
crates/test/src/: lib.rs
docs/: debugging.md  icons.md  sys-bindings.md  updating-sdk.md
examples/: .gitignore  Cargo.toml  README.md  build.py  rust-toolchain.toml
examples/dialog/: Cargo.toml  README.md
examples/dialog/src/: main.rs
examples/gpio/: Cargo.toml  README.md
examples/gpio/src/: main.rs
examples/gui/: Cargo.toml  README.md
examples/gui/src/: ferris_xbm.rs  main.rs
examples/hello-filesystem/: rust-toolchain.toml
examples/hello-filesystem/src/: main.rs
examples/hello-rust/: Cargo.toml  README.md  rust-toolchain.toml
examples/hello-rust/src/: main.rs  rustacean-10x10.icon
examples/hello-storage/: Cargo.toml  README.md
examples/hello-storage/src/: main.rs
examples/notification/: Cargo.toml  README.md
examples/notification/src/: main.rs
tools/: .gitignore  Cargo.toml  Dockerfile  README.md  api-symbols.py  build.rs  update-sdk-bindings.sh
tools/src/: lib.rs  proto.rs  serial.rs  storage.rs
tools/src/proto/: gen.rs
