[workspace]
members = [
    "alloc",
    "flipperzero",
    "sys",
    "rt",
    "test",
    "test/macros",
]
resolver = "2"

[workspace.package]
version = "0.10.0"
description = "Rust for Flipper Zero"
edition = "2021"
rust-version = "1.70.0"
repository = "https://github.com/dcoles/flipperzero-rs"
readme = "../README.md"
license = "MIT"

[workspace.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = []
all-features = true

[workspace.dependencies]
flipperzero-sys = { path = "sys", version = "0.10.0" }
flipperzero-rt = { path = "rt", version = "0.10.0" }
flipperzero-alloc = { path = "alloc", version = "0.10.0" }
flipperzero-test = { path = "test", version = "0.10.0" }
ufmt = "0.2.0"
document-features = { version = "0.2.0" }

[profile.dev]
opt-level = "z"
panic = "abort"

[profile.release]
opt-level = "z"
panic = "abort"
