[package]
name = "flipperzero-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
bindgen = "0.69.1"
bytes = "1.5"
camino = "1.1"
clap = { version = "4.4", features = ["cargo", "derive"] }
crossterm = "0.27.0"
csv = "1.3"
doxygen-rs = "0.4.2"
elf = "0.7.4"
hex = "0.4.3"
md-5 = "0.10.6"
once_cell = "1.19"
rand = "0.8.5"
regex = "1.10"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serialport = "4.3"
shlex = "1.3"
tempfile = "3.8"
which = "5.0"
