[package]
name = "flipperzero-tools"
description = "Rust for Flipper Zero (tools)"
license = "MIT"
version = "0.12.0"
edition = "2021"

[dependencies]
bytes = "1.5"
clap = { version = "4.4", features = ["cargo", "derive"] }
crossterm = "0.28"
elf = "0.7.4"
hex = "0.4.3"
md-5 = "0.10.6"
once_cell = "1.19"
rand = "0.8.5"
regex = "1.10"
serialport = "4.3"
tempfile = "3.8"
which = "6.0"
