[package]
name = "flipperzero-tools"
description = "Rust for Flipper Zero (tools)"
license = "MIT"
version = "0.14.0"
edition = "2024"

[dependencies]
# FIXME: Use new bindgen version once available
bindgen = { git = "https://github.com/rust-lang/rust-bindgen.git" }
bytes = "1.5"
camino = "1.1"
clap = { version = "4.4", features = ["cargo", "derive"] }
crossterm = "0.28"
csv = "1.3"
doxygen-rs = "0.4.2"
elf = "0.7.4"
hex = "0.4.3"
md-5 = "0.10.6"
once_cell = "1.19"
rand = "0.8.5"
regex = "1.10"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serialport = "4.3"
shlex = "1.3"
tempfile = "3.8"
which = "6.0"
