[package]
name = "flipperzero-gui"
version = "0.6.0-alpha"
description = "Rust GUI bindings for Flipper Zero"
repository = "https://github.com/dcoles/flipperzero-rs"
readme = "../../README.md"
license = "MIT"
edition = "2021"
rust-version = "1.64.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = []
all-features = true

[lib]
bench = false
test = false

[dependencies]
flipperzero-sys = { path = "../sys", version = "0.6.0-alpha" }
