[package]
name = "flipperzero-sys"
version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = []
all-features = true

[lib]
bench = false
test = false

[dependencies]
ufmt.workspace = true

[build-dependencies]
bindgen = "0.63.0"
csv = "1.1.6"
dirs = "5.0.1"
serde_json = "1.0.91"
shlex = "1.1.0"
