[package]
name = "flipperzero-sys"
version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = []
all-features = true

[lib]
bench = false
test = false

[dependencies]
ufmt.workspace = true

[lints.rust]
rust_2024_compatibility = "warn"
edition_2024_expr_fragment_specifier = "allow"
