[package]
name = "flipperzero-test"
version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust test harness for Flipper Zero"
autobins = false
autotests = false
autobenches = false

[dependencies]
flipperzero-sys.workspace = true
flipperzero-test-macros = { version = "=0.11.0", path = "macros" }
ufmt.workspace = true

[lib]
bench = false
test = false
