cargo-features = ["different-binary-name"]

[package]
name = "dialog"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "dialog"
filename = "dialog.fap"
bench = false
test = false

[dependencies]
flipperzero = { workspace = true, features = ["alloc"] }
flipperzero-alloc.workspace = true
flipperzero-sys.workspace = true
flipperzero-rt.workspace = true
