cargo-features = ["different-binary-name"]

[package]
name = "dialog"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "dialog"
filename = "dialog.fap"
bench = false
test = false

[dependencies]
flipperzero = { version = "0.7.2", path = "../../crates/flipperzero", features = ["alloc"] }
flipperzero-alloc = { version = "0.7.2", path = "../../crates/alloc" }
flipperzero-sys = { version = "0.7.2", path = "../../crates/sys" }
flipperzero-rt = { version = "0.7.2", path = "../../crates/rt" }
