cargo-features = ["different-binary-name"]

[package]
name = "gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "gui"
filename = "gui.fap"
bench = false
test = false

[dependencies]
flipperzero = { version = "0.6.0", path = "../../crates/flipperzero", features = ["service-gui"] }
flipperzero-sys = { version = "0.6.0", path = "../../crates/sys" }
flipperzero-rt = { version = "0.6.0", path = "../../crates/rt" }
flipperzero-alloc = { version = "0.6.0", path = "../../crates/alloc" }
