[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "hello-rust"
bench = false
test = false

[dependencies]
flipperzero = { version = "0.6.0-alpha", path = "../../crates/flipperzero" }
flipperzero-sys = { version = "0.6.0-alpha", path = "../../crates/sys" }
flipperzero-rt = { version = "0.6.0-alpha", path = "../../crates/rt" }
