cargo-features = ["different-binary-name"]

[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "hello-rust"
filename = "hello-rust.fap"
bench = false
test = false

[dependencies]
flipperzero = { version = "0.7.2", path = "../../crates/flipperzero" }
flipperzero-sys = { version = "0.7.2", path = "../../crates/sys" }
flipperzero-rt = { version = "0.7.2", path = "../../crates/rt" }
