cargo-features = ["different-binary-name"]

[package]
name = "notification"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "notification"
filename = "notification.fap"
bench = false
test = false

[dependencies]
flipperzero = { version = "0.7.0", path = "../../crates/flipperzero" }
flipperzero-sys = { version = "0.7.0", path = "../../crates/sys" }
flipperzero-rt = { version = "0.7.0", path = "../../crates/rt" }
