cargo-features = ["different-binary-name"]

[package]
name = "notification"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
publish.workspace = true
license.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "notification"
filename = "notification.fap"
bench = false
test = false

[dependencies]
flipperzero.workspace = true
flipperzero-sys.workspace = true
flipperzero-rt.workspace = true
