[package]
name = "flipperzero-test-macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Procedural macros for flipperzero-test"
readme.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
