[package]
name = "flipperzero-test-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Procedural macros for flipperzero-test"
readme.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true
doc = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
